force-app/main/default/objects/ServiceSession__c/ServiceSession__c.object-meta.xml
<CustomObject>
    <label>Service Session</label>
    <nameField>
        <label>Service Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Sessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>