force-app/main/default/objects/ServiceSession__c/fields/OmittedContactIds__c.field-meta.xml
<CustomField>
    <fullName>OmittedContactIds__c</fullName>
    <description>This field is used to track which contacts were admitted from the Attendance roster. This is a system field and should not be manually altered.</description>
    <label>Omitted Contact Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>