force-app/main/default/objects/ServiceSession__c/fields/OtherServiceProvider__c.field-meta.xml
<CustomField>
    <fullName>OtherServiceProvider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Other Service Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Service Sessions (Other Service Provider)</relationshipLabel>
    <relationshipName>ServiceSessions1</relationshipName>
    <type>Lookup</type>
</CustomField>