force-app/main/default/objects/ServiceSession__c/fields/ServiceLink__c.field-meta.xml
<CustomField>
    <fullName>ServiceLink__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ServiceSchedule__r.Service__c, ServiceSchedule__r.Service__r.Name, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service</label>
    <type>Text</type>
</CustomField>