force-app/main/default/objects/ServiceSession__c/fields/ServiceSchedule__c.field-meta.xml
<CustomField>
    <fullName>ServiceSchedule__c</fullName>
    <label>Service Schedule</label>
    <referenceTo>ServiceSchedule__c</referenceTo>
    <relationshipLabel>Service Sessions</relationshipLabel>
    <relationshipName>Service_Sessions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>