force-app/main/default/objects/ServiceSession__c/fields/SessionDate__c.field-meta.xml
<CustomField>
    <fullName>SessionDate__c</fullName>
    <label>Session Date</label>
    <type>Date</type>
</CustomField>