force-app/main/default/objects/ServiceSession__c/fields/SessionEnd__c.field-meta.xml
<CustomField>
    <fullName>SessionEnd__c</fullName>
    <label>Session End</label>
    <type>DateTime</type>
</CustomField>