force-app/main/default/objects/ServiceSession__c/fields/SessionStart__c.field-meta.xml
<CustomField>
    <fullName>SessionStart__c</fullName>
    <label>Session Start</label>
    <type>DateTime</type>
</CustomField>