force-app/main/default/objects/ServiceSession__c/fields/TotalAbsent__c.field-meta.xml
<CustomField>
    <fullName>TotalAbsent__c</fullName>
    <label>Total Absent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>