force-app/main/default/objects/ServiceSession__c/fields/TotalAttended__c.field-meta.xml
<CustomField>
    <fullName>TotalAttended__c</fullName>
    <label>Total Attended</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>