force-app/main/default/objects/ServiceSession__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ServiceLink__c</columns>
    <columns>PrimaryServiceProvider__c</columns>
    <columns>SessionStart__c</columns>
    <columns>SessionEnd__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>